--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,21 @@
 /* importing google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-body{
-    background: url("/img/african-map.jpg");
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: url("/img/hands-600497_1280.jpeg")no-repeat center center/cover;
 }
 
-::selection{
+::selection {
     color: #fff;
     background: #007bff;
 }
@@ -19,25 +23,25 @@ body{
 .start_btn,
 .info_box,
 .quiz_box,
-.result_box{
+.result_box {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
-                0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .info_box.activeInfo,
 .quiz_box.activeQuiz,
-.result_box.activeResult{
+.result_box.activeResult {
     opacity: 1;
     z-index: 5;
     pointer-events: auto;
     transform: translate(-50%, -50%) scale(1);
 }
 
-.start_btn button{
+.start_btn button {
     font-size: 25px;
     font-weight: 500;
     color: #393c40;
@@ -49,9 +53,9 @@ body{
     cursor: pointer;
 }
 
-.info_box{
+.info_box {
     width: 540px;
-    background: rgb(196,168,160);
+    background: rgb(196, 168, 160);
     border-radius: 5px;
     transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
@@ -59,7 +63,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.info_box .info-title{
+.info_box .info-title {
     height: 60px;
     width: 100%;
     border-bottom: 1px solid lightgrey;
@@ -71,20 +75,21 @@ body{
     font-weight: 600;
 }
 
-.info_box .info-list{
+.info_box .info-list {
     padding: 15px 30px;
 }
 
-.info_box .info-list .info{
+.info_box .info-list .info {
     margin: 5px 0;
     font-size: 17px;
 }
 
-.info_box .info-list .info span{
+.info_box .info-list .info span {
     font-weight: 600;
     color: #e6e9ed;
 }
-.info_box .buttons{
+
+.info_box .buttons {
     height: 60px;
     display: flex;
     align-items: center;
@@ -93,7 +98,7 @@ body{
     border-top: 1px solid lightgrey;
 }
 
-.info_box .buttons button{
+.info_box .buttons button {
     margin: 0 5px;
     height: 40px;
     width: 100px;
@@ -107,7 +112,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.quiz_box{
+.quiz_box {
     width: 550px;
     background: #a18282;
     border-radius: 5px;
@@ -117,7 +122,7 @@ body{
     transition: all 0.3s ease;
 }
 
-.quiz_box header{
+.quiz_box header {
     position: relative;
     z-index: 2;
     height: 70px;
@@ -127,15 +132,15 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
-.quiz_box header .title{
+.quiz_box header .title {
     font-size: 20px;
     font-weight: 600;
 }
 
-.quiz_box header .timer{
+.quiz_box header .timer {
     color: #454f45;
     background: #cce5ff;
     border: 1px solid #b8daff;
@@ -148,13 +153,13 @@ body{
     width: 145px;
 }
 
-.quiz_box header .timer .time_left_txt{
+.quiz_box header .timer .time_left_txt {
     font-weight: 400;
     font-size: 17px;
     user-select: none;
 }
 
-.quiz_box header .timer .timer_sec{
+.quiz_box header .timer .timer_sec {
     font-size: 18px;
     font-weight: 500;
     height: 30px;
@@ -168,7 +173,7 @@ body{
     user-select: none;
 }
 
-.quiz_box header .time_line{
+.quiz_box header .time_line {
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -176,23 +181,23 @@ body{
     background: #f6c054;
 }
 
-section{
+section {
     padding: 25px 30px 20px 30px;
     background: url("/img/hands-600497_1280.jpeg")no-repeat center center/cover;
 
 }
 
-section .que_text{
+section .que_text {
     font-size: 25px;
     font-weight: 600;
 }
 
-section .option_list{
+section .option_list {
     padding: 20px 0px;
-    display: block;   
+    display: block;
 }
 
-section .option_list .option{
+section .option_list .option {
     background: aliceblue;
     border: 1px solid #76bcf9;
     border-radius: 5px;
@@ -206,33 +211,33 @@ section .option_list .option{
     justify-content: space-between;
 }
 
-section .option_list .option:last-child{
+section .option_list .option:last-child {
     margin-bottom: 0px;
 }
 
-section .option_list .option:hover{
+section .option_list .option:hover {
     color: #004085;
     background: #cce5ff;
     border: 1px solid #b8daff;
 }
 
-section .option_list .option.correct{
+section .option_list .option.correct {
     color: #155724;
     background: #d4edda;
     border: 1px solid #c3e6cb;
 }
 
-section .option_list .option.incorrect{
+section .option_list .option.incorrect {
     color: #721c24;
     background: #f8d7da;
     border: 1px solid #f5c6cb;
 }
 
-section .option_list .option.disabled{
+section .option_list .option.disabled {
     pointer-events: none;
 }
 
-section .option_list .option .icon{
+section .option_list .option .icon {
     height: 26px;
     width: 26px;
     border: 2px solid transparent;
@@ -243,19 +248,20 @@ section .option_list .option .icon{
     transition: all 0.3s ease;
     line-height: 24px;
 }
-.option_list .option .icon.tick{
+
+.option_list .option .icon.tick {
     color: #23903c;
     border-color: #23903c;
     background: #d4edda;
 }
 
-.option_list .option .icon.cross{
+.option_list .option .icon.cross {
     color: #a42834;
     background: #f8d7da;
     border-color: #a42834;
 }
 
-footer{
+footer {
     height: 60px;
     padding: 0 30px;
     display: flex;
@@ -264,21 +270,21 @@ footer{
     border-top: 1px solid lightgrey;
 }
 
-footer .total_que span{
+footer .total_que span {
     display: flex;
     user-select: none;
 }
 
-footer .total_que span p{
+footer .total_que span p {
     font-weight: 500;
     padding: 0 5px;
 }
 
-footer .total_que span p:first-child{
+footer .total_que span p:first-child {
     padding-left: 0px;
 }
 
-footer button{
+footer button {
     height: 40px;
     padding: 0 13px;
     font-size: 18px;
@@ -297,17 +303,17 @@ footer button{
     transition: all 0.3s ease;
 }
 
-footer button:hover{
+footer button:hover {
     background: #0263ca;
 }
 
-footer button.show{
+footer button.show {
     opacity: 1;
     pointer-events: auto;
     transform: scale(1);
 }
 
-.result_box{
+.result_box {
     background: #846969;
     border-radius: 5px;
     display: flex;
@@ -322,35 +328,35 @@ footer button.show{
     transition: all 0.3s ease;
 }
 
-.result_box .icon{
+.result_box .icon {
     font-size: 100px;
     color: #c5925f;
     margin-bottom: 10px;
 }
 
-.result_box .complete_text{
+.result_box .complete_text {
     font-size: 20px;
     font-weight: 500;
 }
 
-.result_box .score_text span{
+.result_box .score_text span {
     display: flex;
     margin: 10px 0;
     font-size: 18px;
     font-weight: 500;
 }
 
-.result_box .score_text span p{
+.result_box .score_text span p {
     padding: 0 4px;
     font-weight: 600;
 }
 
-.result_box .buttons{
+.result_box .buttons {
     display: flex;
     margin: 20px 0;
 }
 
-.result_box .buttons button{
+.result_box .buttons button {
     margin: 0 10px;
     height: 45px;
     padding: 0 20px;
@@ -364,85 +370,89 @@ footer button.show{
     transition: all 0.3s ease;
 }
 
-.buttons button.restart{
+.buttons button.restart {
     color: #fff;
     background: #9dadbe;
 }
 
-.buttons button.restart:hover{
+.buttons button.restart:hover {
     background: #9f8a45;
 }
 
-.buttons button.quit{
+.buttons button.quit {
     color: #080808;
     background: #c4c0c0;
 }
 
-.buttons button.quit:hover{
+.buttons button.quit:hover {
     color: #c4c0c0;
     background: #877070;
 }
 
-    /* Footer social network */
-    .copyright-wrapper {
+/* Footer social network */
+.copyright-wrapper {
     background-color: #291415;
     margin-top: auto;
     padding-bottom: 15px;
     font-family: 'Alegreya SC', sans-serif;
     border-top: 2px solid wheat;
     color: bisque;
-        flex-direction: column;
+    flex-direction: column;
     height: auto;
-    
+    flex-shrink: 0;
 
-    }
-    
-    .social-networks {
-        background: #342a38;
-        display: flex;
-        text-align: center;
-        justify-content: center;
-        padding: 0;
-        margin: 0 auto;
-        max-width: 300px;
-        gap: 40px;
-        
-        
-    
-    }
+}
 
-    .social-networks>li {
-        display: inline;
-        margin-top: 20px;
-        width: 20%;
-        list-style: none;
-    }
-    
-    .social-networks i {
-        color: bisque;
-        font-size: 30px;
-    }
-    
-    .copyright-wrapper {
-        font-family: 'Merriweather', sans-serif;
-        text-align: center;
-        display: inline;
-    }
-    
-    .copyright-wrapper p {
-        color: bisque;
-        font-size: 17px;
-    }
-    
-    p .copyright {
-        margin-right: 5px;
-        vertical-align: middle;
-    }
+.social-networks {
+    background: #342a38;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0 auto;
+    max-width: 300px;
+    gap: 30px;
+    flex: 1 0 auto;
+
+}
+
+.social-networks>li {
+    display: inline;
+    margin-top: 20px;
+    width: 20%;
+    list-style: none;
+
+
+}
+
+.social-networks i {
+    color: bisque;
+    font-size: 30px;
+}
+
+.copyright-wrapper {
+    font-family: 'Merriweather', sans-serif;
+    text-align: center;
+    display: inline;
+}
+
+.copyright-wrapper p {
+    color: bisque;
+    font-size: 17px;
+}
+
+p .copyright {
+    margin-right: 5px;
+    vertical-align: middle;
+}
 
 /*media queries*/
 /* For tablets */
 @media only screen and (max-width: 768px) {
-    .info_box, .quiz_box, .result_box {
+
+    .info_box,
+    .quiz_box,
+    .result_box {
         width: 90%;
         font-size: 0.9em;
     }
@@ -456,7 +466,8 @@ footer button.show{
         padding: 10px 20px;
     }
 
-    .info_box .info-title, .info_box .buttons {
+    .info_box .info-title,
+    .info_box .buttons {
         padding: 0 20px;
     }
 
@@ -479,7 +490,10 @@ footer button.show{
 
 /* For mobile phones */
 @media only screen and (max-width: 480px) {
-    .info_box, .quiz_box, .result_box {
+
+    .info_box,
+    .quiz_box,
+    .result_box {
         width: 100%;
         font-size: 0.8em;
     }
@@ -489,7 +503,8 @@ footer button.show{
         padding: 8px 15px;
     }
 
-    .info_box .info-title, .info_box .buttons {
+    .info_box .info-title,
+    .info_box .buttons {
         padding: 0 10px;
     }
 
