--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -260,7 +260,8 @@ section .option_list .option .icon {
     border-color: #a42834;
 }
 
-footer {
+footer .total_que {
+    /* come back here later*/
     height: 60px;
     padding: 0 30px;
     display: flex;
@@ -388,52 +389,44 @@ footer button.show {
     background: #877070;
 }
 
-/*.social-networks {
-    background: rgb(4, 1, 18);
-    display: flex;
-    text-align: center;
-    border-top: 2px solid wheat;
-    justify-content: center;
-    padding: 0;
-    margin: 0 auto;
-    max-width: 300px;
-    gap: 30px;
-    flex: 1 0 auto;
+/* Style for the main page footer */
+.main-footer {
+    background-color: #ccc;
+    color: #000;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
-.social-networks>li {
-    display: inline;
-    margin-top: 20px;
-    width: 20%;
+/* Style for the social network links */
+footer ul.social-networks {
     list-style: none;
+    padding: 0;
 }
 
-.social-networks i {
-    color: bisque;
-    font-size: 30px;
+footer ul.social-networks li {
+    display: inline;
+    margin-right: 10px;
 }
 
-.copyright-wrapper {
-    background: rgb(4, 1, 18);
-    margin-top: auto;
-    padding-bottom: 28px;
-    font-family: 'Alegreya SC', sans-serif;
-    border-top: 2px solid wheat;
-    color: #080808;
-    flex-direction: column;
-    height: auto;
-    flex-shrink: 0;
+footer ul.social-networks a {
+    color: #333;
+    text-decoration: none;
 }
 
-.copyright-wrapper p {
-    color: bisque;
-    font-size: 17px;
-}
-
-p .copyright {
+/* Style for the font awesome icons */
+footer ul.social-networks i {
+    font-size: 24px;
     margin-right: 5px;
-    vertical-align: middle;
-}*/
+}
+
+/* Style for the copyright text */
+footer p {
+    color: #777;
+    font-size: 14px;
+}
+
 
 /* Styles for tablets */
 @media (min-width: 768px) {
