style: change footer to relative

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -578,7 +578,7 @@ section {
 footer {
     padding: 10px;
 
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
