--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,11 @@ body {
     line-height: 1.5;
 }
 
+::selection {
+    color: #fff;
+    background: #8eb9e7;
+}
+
 .start_btn,
 .info_box,
 .quiz_box,
@@ -36,17 +41,12 @@ body {
     transform: translate(-50%, -50%) scale(1);
 }
 
-::selection {
-    color: #fff;
-    background: #8eb9e7;
-}
-
 .heading {
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
-    background: #786047;
+    background: #927979;
     font-family: 'Alegreya SC', sans-serif;
     color: white;
     text-align: center;
@@ -56,12 +56,11 @@ body {
     font-size: 50px;
     font-weight: 500;
     color: #000004;
-
     padding: 15px 30px;
     outline: none;
     border: none;
     border-radius: 5px;
-    background: #7a6130;
+    background: #927979;
     cursor: pointer;
 }
 
@@ -273,15 +272,13 @@ section .option_list .option .icon {
     border-color: #a42834;
 }
 
-.total_que {
-
-    /* come back here later*/
+footer {
     height: 60px;
     padding: 0 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-top: 1px solid #f6c054 (82, 211, 65);
+    /*border-top: 1px solid #f6c054 (82, 211, 65);*/
     border-top: 1px solid lightgrey;
 }
 
@@ -329,7 +326,7 @@ footer button.show {
 }
 
 .result_box {
-    background: #846969;
+    background: #927979;
     border-radius: 5px;
     display: flex;
     padding: 25px 30px;
@@ -404,7 +401,6 @@ footer button.show {
     background: #877070;
 }
 
-
 /* Style for the main page footer */
 .main-footer {
     background-color: #ccc;
@@ -450,12 +446,6 @@ footer p {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background: url("/assets/img/hands-600497_1280.jpeg");
-    font-size: 16px;
-    line-height: 1.5;
 }
 
 /* ... ( existing styles) */
@@ -576,7 +566,6 @@ section {
 
 footer {
     padding: 10px;
-
     position: relative;
     left: 0;
     bottom: 0;
@@ -588,7 +577,6 @@ footer {
     margin: 0 10px;
     justify-content: space-around;
     gap: 10px;
-
 }
 
 #networks i {
