--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,7 @@ body {
     width: 100%;
     background: #927979;
     font-family: 'Alegreya SC', sans-serif;
-    color: white;
+    color: lemonchiffon;
     text-align: center;
     font-size: 30px;
 
@@ -57,7 +57,7 @@ body {
 .start_btn button {
     font-size: 50px;
     font-weight: 500;
-    color: #000004;
+    color: lemonchiffon;
     padding: 15px 30px;
     outline: none;
     border: none;
