--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,7 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    background: #927979;
+    background: linear-gradient(90deg, #564040 0%, #927979 43%, #382f2f 100%);
     font-family: 'Alegreya SC', sans-serif;
     color: lemonchiffon;
     text-align: center;
@@ -62,12 +62,13 @@ body {
     outline: none;
     border: none;
     border-radius: 5px;
-    background: #927979;
+    background: linear-gradient(90deg, #564040 0%, #8c5858 43%, #382f2f 100%);
+    /*background: #927979;*/
     cursor: pointer;
 }
 
 .info_box {
-    background: rgb(196, 168, 160);
+    background: rgb(185 173 169);
     width: 540px;
     border-radius: 5px;
     opacity: 0;
@@ -127,6 +128,7 @@ body {
 .quiz_box {
     width: 700px;
     background: #a18282;
+    background: linear-gradient(90deg, #564040 0%, #a18282 43%, #382f2f 100%);
     border-radius: 5px;
     transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
@@ -139,7 +141,7 @@ body {
     z-index: 2;
     height: 70px;
     padding: 0 30px;
-    background: #a18282;
+    /*background: #a18282;*/
     border-radius: 5px 5px 0 0;
     display: flex;
     align-items: center;
@@ -328,7 +330,7 @@ footer button.show {
 }
 
 .result_box {
-    background: #927979;
+    background: linear-gradient(90deg, #483636 0%, #927979 43%);
     border-radius: 5px;
     display: flex;
     padding: 25px 30px;
@@ -405,7 +407,7 @@ footer button.show {
 
 /* Style for the main page footer */
 .main-footer {
-    background-color: #ccc;
+    background: linear-gradient(90deg, #564040 0%, #927979 43%, #382f2f 100%);
     color: #000;
     padding: 10px;
     position: fixed;
@@ -572,7 +574,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    color: white;
+    color: lemonchiffon;
     text-align: center;
     align-items: center;
     margin: 0 10px;
