--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -429,16 +429,27 @@ footer ul.social-networks a {
     text-decoration: none;
 }
 
+/* Hover effects on social_network icons */
+.social-networks a:hover {
+    background-color: #0a0a0a;
+    transition: 0.5s;
+}
+
+.social-networks a:hover i {
+    color: white;
+    transition: 0.5s;
+}
+
 /* Style for the font awesome icons */
 footer ul.social-networks i {
-    font-size: 24px;
+    font-size: 30px;
     margin-right: 5px;
 }
 
 /* Style for the copyright text */
 footer p {
     color: #070000;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 
